@@ -378,42 +378,42 @@ public class DCDateTest {
     public void testDisplayDate() {
         dc = new DCDate("2010");
         assertThat("testDisplayDate 1 ", dc.displayDate(true, true,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("2010"));
 
         dc = new DCDate("2010-04");
         assertThat("testDisplayDate 2 ", dc.displayDate(true, true,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("Apr-2010"));
 
         dc = new DCDate("2010-04-14");
         assertThat("testDisplayDate 3 ", dc.displayDate(true, true,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("14-Apr-2010"));
 
         dc = new DCDate("2010-04-14T00:00:01Z");
         assertThat("testDisplayDate 4 ", dc.displayDate(true, true,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("13-Apr-2010 16:00:01"));
 
         dc = new DCDate("2010-04-14T00:00:01Z");
         assertThat("testDisplayDate 5 ", dc.displayDate(false, true,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("13-Apr-2010"));
 
         dc = new DCDate("2010-04-14T00:00:01Z");
         assertThat("testDisplayDate 6 ", dc.displayDate(true, false,
-                                                        Locale.of("es")),
+                                                        new Locale("es")),
                    equalTo("14-abr-2010 00:00:01"));
 
         dc = new DCDate("2010-04-14T00:00:01Z");
         assertThat("testDisplayDate 7 ", dc.displayDate(false, false,
-                                                        Locale.of("en", "GB")),
+                                                        new Locale("en_GB")),
                    equalTo("14-Apr-2010"));
 
         dc = new DCDate("2010-04-14T00:00:01.000");
         assertThat("testDisplayDate 8 ", dc.displayDate(false, false,
-                        Locale.of("en", "GB")),
+                        new Locale("en_GB")),
                 equalTo("14-Apr-2010"));
     }
 
@@ -433,63 +433,63 @@ public class DCDateTest {
      */
     @Test
     public void testGetMonthName() {
-        assertThat("testGetMonthName 0", DCDate.getMonthName(-1, Locale.of("en")),
+        assertThat("testGetMonthName 0", DCDate.getMonthName(-1, new Locale("en")),
                    equalTo("Unspecified"));
-        assertThat("testGetMonthName 1", DCDate.getMonthName(0, Locale.of("en")),
+        assertThat("testGetMonthName 1", DCDate.getMonthName(0, new Locale("en")),
                    equalTo("Unspecified"));
-        assertThat("testGetMonthName 2", DCDate.getMonthName(13, Locale.of("en")),
+        assertThat("testGetMonthName 2", DCDate.getMonthName(13, new Locale("en")),
                    equalTo("Unspecified"));
-        assertThat("testGetMonthName 3", DCDate.getMonthName(14, Locale.of("en")),
+        assertThat("testGetMonthName 3", DCDate.getMonthName(14, new Locale("en")),
                    equalTo("Unspecified"));
 
-        assertThat("testGetMonthName 4", DCDate.getMonthName(1, Locale.of("en")),
+        assertThat("testGetMonthName 4", DCDate.getMonthName(1, new Locale("en")),
                    equalTo("January"));
-        assertThat("testGetMonthName 5", DCDate.getMonthName(2, Locale.of("en")),
+        assertThat("testGetMonthName 5", DCDate.getMonthName(2, new Locale("en")),
                    equalTo("February"));
-        assertThat("testGetMonthName 6", DCDate.getMonthName(3, Locale.of("en")),
+        assertThat("testGetMonthName 6", DCDate.getMonthName(3, new Locale("en")),
                    equalTo("March"));
-        assertThat("testGetMonthName 7", DCDate.getMonthName(4, Locale.of("en")),
+        assertThat("testGetMonthName 7", DCDate.getMonthName(4, new Locale("en")),
                    equalTo("April"));
-        assertThat("testGetMonthName 8", DCDate.getMonthName(5, Locale.of("en")),
+        assertThat("testGetMonthName 8", DCDate.getMonthName(5, new Locale("en")),
                    equalTo("May"));
-        assertThat("testGetMonthName 9", DCDate.getMonthName(6, Locale.of("en")),
+        assertThat("testGetMonthName 9", DCDate.getMonthName(6, new Locale("en")),
                    equalTo("June"));
-        assertThat("testGetMonthName 10", DCDate.getMonthName(7, Locale.of("en")),
+        assertThat("testGetMonthName 10", DCDate.getMonthName(7, new Locale("en")),
                    equalTo("July"));
-        assertThat("testGetMonthName 11", DCDate.getMonthName(8, Locale.of("en")),
+        assertThat("testGetMonthName 11", DCDate.getMonthName(8, new Locale("en")),
                    equalTo("August"));
-        assertThat("testGetMonthName 12", DCDate.getMonthName(9, Locale.of("en")),
+        assertThat("testGetMonthName 12", DCDate.getMonthName(9, new Locale("en")),
                    equalTo("September"));
-        assertThat("testGetMonthName 13", DCDate.getMonthName(10, Locale.of("en")),
+        assertThat("testGetMonthName 13", DCDate.getMonthName(10, new Locale("en")),
                    equalTo("October"));
-        assertThat("testGetMonthName 14", DCDate.getMonthName(11, Locale.of("en")),
+        assertThat("testGetMonthName 14", DCDate.getMonthName(11, new Locale("en")),
                    equalTo("November"));
-        assertThat("testGetMonthName 15", DCDate.getMonthName(12, Locale.of("en")),
+        assertThat("testGetMonthName 15", DCDate.getMonthName(12, new Locale("en")),
                    equalTo("December"));
 
-        assertThat("testGetMonthName 16", DCDate.getMonthName(1, Locale.of("es")),
+        assertThat("testGetMonthName 16", DCDate.getMonthName(1, new Locale("es")),
                    equalTo("enero"));
-        assertThat("testGetMonthName 17", DCDate.getMonthName(2, Locale.of("es")),
+        assertThat("testGetMonthName 17", DCDate.getMonthName(2, new Locale("es")),
                    equalTo("febrero"));
-        assertThat("testGetMonthName 18", DCDate.getMonthName(3, Locale.of("es")),
+        assertThat("testGetMonthName 18", DCDate.getMonthName(3, new Locale("es")),
                    equalTo("marzo"));
-        assertThat("testGetMonthName 19", DCDate.getMonthName(4, Locale.of("es")),
+        assertThat("testGetMonthName 19", DCDate.getMonthName(4, new Locale("es")),
                    equalTo("abril"));
-        assertThat("testGetMonthName 20", DCDate.getMonthName(5, Locale.of("es")),
+        assertThat("testGetMonthName 20", DCDate.getMonthName(5, new Locale("es")),
                    equalTo("mayo"));
-        assertThat("testGetMonthName 21", DCDate.getMonthName(6, Locale.of("es")),
+        assertThat("testGetMonthName 21", DCDate.getMonthName(6, new Locale("es")),
                    equalTo("junio"));
-        assertThat("testGetMonthName 22", DCDate.getMonthName(7, Locale.of("es")),
+        assertThat("testGetMonthName 22", DCDate.getMonthName(7, new Locale("es")),
                    equalTo("julio"));
-        assertThat("testGetMonthName 23", DCDate.getMonthName(8, Locale.of("es")),
+        assertThat("testGetMonthName 23", DCDate.getMonthName(8, new Locale("es")),
                    equalTo("agosto"));
-        assertThat("testGetMonthName 24", DCDate.getMonthName(9, Locale.of("es")),
+        assertThat("testGetMonthName 24", DCDate.getMonthName(9, new Locale("es")),
                    equalTo("septiembre"));
-        assertThat("testGetMonthName 25", DCDate.getMonthName(10, Locale.of("es")),
+        assertThat("testGetMonthName 25", DCDate.getMonthName(10, new Locale("es")),
                    equalTo("octubre"));
-        assertThat("testGetMonthName 26", DCDate.getMonthName(11, Locale.of("es")),
+        assertThat("testGetMonthName 26", DCDate.getMonthName(11, new Locale("es")),
                    equalTo("noviembre"));
-        assertThat("testGetMonthName 27", DCDate.getMonthName(12, Locale.of("es")),
+        assertThat("testGetMonthName 27", DCDate.getMonthName(12, new Locale("es")),
                    equalTo("diciembre"));
     }
 
